--- a/src/app/pages/formulario/formulario.component.html
+++ b/src/app/pages/formulario/formulario.component.html
@@ -6,43 +6,43 @@
 
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 1:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 1">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 2:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 2">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 3:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 3">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 4:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 4">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 5:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 5">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 6:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 6">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 7:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 7">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 8:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 8">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 9:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 9">
         </div>
         <div class="mt-3 w-96 mx-auto p-2">
             <label  class="form-label font-mono p-2">Pregunta 10:</label>
-            <input type="text" class="form-control ml-3 border border-black rounded px-2 w-3/5" placeholder="Ingrese usuario">
+            <input type="text" class="form-control ml-3 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 10">
         </div>
         
         <div class="mt-3 pl-6 col-span-2 w-1/4 mx-auto  ">
