--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,19 +4,26 @@
 
     <div class="mt-3 w-96 mx-auto p-2">
         <label  class="form-label font-mono p-2">Usuario:</label>
-        <input type="text" class="form-control ml-5 border border-black rounded px-2 w-4/6" placeholder="Ingrese usuario">
+        <input type="text" #usuarioInput class="form-control ml-5 border border-black rounded px-2 w-4/6" placeholder="Ingrese usuario">
     </div>
     
     <div class="mt-3 w-96 mx-auto p-2">
         <label  class="form-label font-mono p-2">Password:</label>
-        <input type="password" class="form-control ml-3 border border-black rounded px-2 w-4/6" placeholder="Ingrese contraseña">
+        <input type="password" #passwordInput class="form-control ml-3 border border-black rounded px-2 w-4/6" placeholder="Ingrese contraseña">
     </div>
     
     <div class="mt-3 p-3 w-56 mx-auto  ">
-        <button class="rounded px-4 bg-blue-700 hover:bg-blue-800 font-mono font-bold text-xl text-white">Iniciar Session</button>
+        <button class="rounded px-4 bg-blue-700 hover:bg-blue-800 font-mono font-bold text-xl text-white" 
+        (click)="verificar(usuarioInput.value, passwordInput.value)" >Iniciar Session</button>
     </div>
 
+    <div class="bienvenido" *ngIf="aceptado == true">
+        <h1 class="text-green-700 text-center font-mono font-bold">{{mensaje}}</h1>
+      </div>
 
+      <div class="rechazado" *ngIf="rechazado == true">
+        <h1 class="text-red-800 text-center font-mono font-bold">{{mensaje}}.</h1>
+      </div>
 
 
 
