--- a/src/app/pages/formulario/formulario.component.html
+++ b/src/app/pages/formulario/formulario.component.html
@@ -1,55 +1,54 @@
-<div class="container p-2 mx-auto rounded w-3/4 mt-5">
+<div class="container p-1 mx-auto rounded w-3/4 mt-5">
 
     <h1 class="text-center font-mono text-3xl uppercase font-bold">Formulario</h1>
 
-    <div class="formulario grid grid-cols-2 gap-2">
+    <form [formGroup]="form" (submit)="registrar()">
 
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 1:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 1">
+        <div class="formulario ">
+
+            <div class="mt-1 w-1/3  mx-auto p-1 ">
+                <label class="form-label font-mono p-2 w-full">Nombre:</label>
+                <input type="text" class="form-control ml-5 border border-black rounded p-1 w-full" formControlName="nombre">
+            </div>
+            <div class="mt-1 w-1/3 mx-auto p-1">
+                <label class="form-label font-mono p-1 w-full">Apellido:</label>
+                <input type="text" class="form-control ml-5 border border-black rounded p-1 w-full" formControlName="apellido">
+            </div>
+            <div class="mt-1 w-1/3 mx-auto p-1">
+                <label class="form-label font-mono p-1 w-full">Usuario:</label>
+                <input type="text" class="form-control ml-5 border border-black rounded p-1 w-full" formControlName="usuario">
+            </div>
+            <div class="mt-1 w-1/3 mx-auto p-1">
+                <label class="form-label font-mono p-1 w-full">Email:</label>
+                <input type="text" class="form-control ml-5 border border-black rounded p-1 w-full" formControlName="email">
+            </div>
+            <div class="mt-1 w-1/3 mx-auto p-1">
+                <label class="form-label font-mono p-1 w-full">Asunto:</label>
+                <input type="text" class="form-control ml-5 border border-black rounded p-1 w-full" formControlName="asunto">
+            </div>
+
+            <div class="mt-1 w-1/3 mx-auto p-1">
+                <label class="form-label font-mono p-1 w-full">Mensaje:</label>
+                <textarea class="form-control ml-5 border border-black rounded p-1  w-full" rows="3"
+                    style="resize: none;" formControlName="mensaje"></textarea>
+            </div>
+
+            <div class="mt-1 w-40 mx-auto  ">
+                <button
+                    class="rounded px-8 bg-green-700 hover:bg-green-900 font-mono font-bold text-xl text-white">Registrar</button>
+            </div>
+
+
         </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 2:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 2">
-        </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 3:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 3">
-        </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 4:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 4">
-        </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 5:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 5">
-        </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 6:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 6">
-        </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 7:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 7">
-        </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 8:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 8">
-        </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 9:</label>
-            <input type="text" class="form-control ml-5 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 9">
-        </div>
-        <div class="mt-3 w-96 mx-auto p-2">
-            <label  class="form-label font-mono p-2">Pregunta 10:</label>
-            <input type="text" class="form-control ml-3 border border-black rounded px-2 w-3/5" placeholder="Ingrese respuesta 10">
-        </div>
-        
-        <div class="mt-3 pl-6 col-span-2 w-1/4 mx-auto  ">
-            <button class="rounded px-4 bg-green-700 hover:bg-green-900 font-mono font-bold text-xl text-white">Registrar</button>
-        </div>
-        
-        
+
+
+    </form>
+
+
+    <div class=" p-2 mt-5 rounded w-3/4 mx-auto">
+        <p class="text-center">{{persona | json}}</p>
     </div>
-    
+
+
+
 </div>
