--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,17 @@
 <div class="container p-2 w-3/4 mx-auto mt-8 rounded">
 
-    <h1 class="text-2xl font-mono font-bold text-center uppercase">Lorem ipsum sit amet consectetur adipisicing</h1>
+    <h1 class="text-2xl text-white font-mono font-extrabold	 text-center uppercase">Lorem ipsum sit amet consectetur adipisicing</h1>
 
-    <div class="tarjeta flex mt-5">
-        <div class="p-2 m-3">
-            <img src="https://assets.stickpng.com/images/584a9b47b080d7616d298778.png" width="1000px" >
+    <div class="tarjeta flex mt-5 ">
+        
+        <div class="p-2 m-3 ">
+            <h2 class="text-xl p-2 font-mono text-center text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nobis, voluptate hic consequuntur sed debitis quae beatae a minus quibusdam, alias cupiditate tenetur repudiandae unde quos soluta dignissimos, similique molestiae magni inventore perferendis tempore eos consequatur autem.</h2>
         </div>
-        <div class="p-2 m-3">
-            <h2 class="text-xl p-2 font-mono text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nobis, voluptate hic consequuntur sed debitis quae beatae a minus quibusdam, alias cupiditate tenetur repudiandae unde quos soluta dignissimos, similique molestiae magni inventore perferendis tempore eos consequatur autem.</h2>
+        
+        <div class="p-2 m-3 ">
+            <img src="https://imagenpng.com/wp-content/uploads/2016/01/real-madrid-logo-png-0.png" width="450px" alt="">
         </div>
+        
     </div>
 
 
