--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container  p-5 w-1/2 mx-auto mt-5 rounded">
 
-    <h1 class="text-center font-mono font-bold uppercase text-3xl">Login</h1>
+    <h1 class="titulo">Login</h1>
 
-    <div class="mt-3 w-96 mx-auto p-2">
+    <!-- <div class="mt-3 w-96 mx-auto p-2">
         <label  class="form-label font-mono p-2">Usuario:</label>
         <input type="text" #usuarioInput class="form-control ml-5 border border-black rounded px-2 w-4/6" placeholder="Ingrese usuario">
     </div>
@@ -10,20 +10,28 @@
     <div class="mt-3 w-96 mx-auto p-2">
         <label  class="form-label font-mono p-2">Password:</label>
         <input type="password" #passwordInput class="form-control ml-3 border border-black rounded px-2 w-4/6" placeholder="Ingrese contraseña">
-    </div>
+    </div> -->
+
+
+    <form class="example-form">
+      <mat-form-field class="example-full-width">
+        <mat-label class="etiqueta">Usuario</mat-label>
+        <input #usuarioInput type="text"class="caja" matInput >
+      </mat-form-field>
+      
+      <mat-form-field class="example-full-width">
+        <mat-label class="etiqueta">Contraseña</mat-label>
+        <input #passwordInput type="password" class="caja" matInput >
+      </mat-form-field>
+    </form>
+
     
     <div class="mt-3 p-3 w-56 mx-auto  ">
-        <button class="rounded px-4 bg-blue-700 hover:bg-blue-800 font-mono font-bold text-xl text-white" 
+        <button class="rounded px-4 py-2 bg-blue-700 hover:bg-blue-800 font-mono font-bold text-xl text-white" 
         (click)="verificar(usuarioInput.value, passwordInput.value)" >Iniciar Session</button>
     </div>
 
-    <div class="bienvenido" *ngIf="aceptado == true">
-        <h1 class="text-green-700 text-center font-mono font-bold">{{mensaje}}</h1>
-      </div>
 
-      <div class="rechazado" *ngIf="rechazado == true">
-        <h1 class="text-red-800 text-center font-mono font-bold">{{mensaje}}.</h1>
-      </div>
 
 
 
