--- a/src/app/pages/formulario/formulario.component.css
+++ b/src/app/pages/formulario/formulario.component.css
@@ -10,15 +10,17 @@
     width: 100%;
   }
   
+/* etiqueta{} */
+
   .etiqueta{
     color: black;
     font-weight: 500;
     font-size: 20px;
   }
   
-  .caja{
+  /* .caja{
     border-bottom: 2px solid white;
-  }  
+  }   */
   
   .titulo{
     text-align: center;
