--- a/src/app/pages/formulario/formulario.component.html
+++ b/src/app/pages/formulario/formulario.component.html
@@ -26,7 +26,7 @@
         
         <mat-form-field class="example-full-width">
             <mat-label class="etiqueta">Mensaje</mat-label>
-            <textarea matInput formControlName="mensaje" class="area" style="resize: none;"></textarea>
+            <textarea matInput formControlName="mensaje" class="caja" style="resize: none;"></textarea>
         </mat-form-field>
 
         <div class="mt-1 w-40 mx-auto  ">
